vorking on firebase integration

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,3 +59,16 @@ body {
 .router-container {
     padding: 16px 40px 16px 40px;
 }
+
+.full-width {
+    width: 100%;
+}
+
+.input-fields-display {
+    display: flex;
+    gap: 8px;
+}
+
+.mb-10 {
+    margin-bottom: 10px;
+}
