--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,27 +1,73 @@
 <body>
     <div class="dialog-add-user">
-        <h1 mat-dialog-title>Add user</h1>
+        <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+
+        <h3 mat-dialog-title>Add user</h3>
         <mat-dialog-content>
-            <div class="add-user-name">
+            <div class="input-fields-display">
                 <p>
                     <mat-form-field appearance="outline">
                         <mat-label>First Name</mat-label>
-                        <input matInput placeholder="">
+                        <input type="text" [disabled]="loading" [(ngModel)]="user.firstName" matInput placeholder="">
                         <!-- <mat-hint>Please enter a name</mat-hint> -->
                     </mat-form-field>
                 </p>
                 <p>
                     <mat-form-field appearance="outline">
                         <mat-label>Last Name</mat-label>
-                        <input matInput placeholder="">
+                        <input type="text" [disabled]="loading" [(ngModel)]="user.lastName" matInput placeholder="">
+                        <!-- <mat-hint>Please enter a name</mat-hint> -->
+                    </mat-form-field>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <mat-form-field appearance="outline" class="full-width">
+                        <mat-label>E-Mail</mat-label>
+                        <input type="email" [disabled]="loading" [(ngModel)]="user.email" matInput placeholder="">
+                        <!-- <mat-hint>Please enter a name</mat-hint> -->
+                    </mat-form-field>
+                </p>
+            </div>
+            <div class="birthdate-picker mb-10">
+                <mat-form-field appearance="outline" class="full-width">
+                    <mat-label>Birth Date</mat-label>
+                    <input type="date" [disabled]="loading" [(ngModel)]="birthDate" matInput placeholder=""
+                        [matDatepicker]="datepicker">
+                    <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
+                    <mat-datepicker #datepicker></mat-datepicker>
+                    <!-- <mat-hint>Please enter a name</mat-hint> -->
+                </mat-form-field>
+            </div>
+            <div>
+                <p>
+                    <mat-form-field appearance="outline" class="full-width">
+                        <mat-label>Street + No.</mat-label>
+                        <input [disabled]="loading" [(ngModel)]="user.street" matInput placeholder="">
+                        <!-- <mat-hint>Please enter a name</mat-hint> -->
+                    </mat-form-field>
+                </p>
+            </div>
+            <div class="input-fields-display">
+                <p>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Zip Code</mat-label>
+                        <input type="number" [disabled]="loading" [(ngModel)]="user.zipCode" matInput placeholder="">
+                        <!-- <mat-hint>Please enter a name</mat-hint> -->
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field appearance="outline">
+                        <mat-label>City</mat-label>
+                        <input type="text" [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="">
                         <!-- <mat-hint>Please enter a name</mat-hint> -->
                     </mat-form-field>
                 </p>
             </div>
         </mat-dialog-content>
         <mat-dialog-actions>
-            <button mat-button>Cancel</button>
-            <button mat-button cdkFocusInitial>Save</button>
+            <button mat-button (click)="closeDialog()">Cancel</button>
+            <button mat-button cdkFocusInitial (click)="saveUser()">Save</button>
         </mat-dialog-actions>
     </div>
 </body>
