--- a/src/app/dialog-add-user/dialog-add-user.component.scss
+++ b/src/app/dialog-add-user/dialog-add-user.component.scss
@@ -1,12 +1,11 @@
 .dialog-add-user {
     background-color: rgba(255, 255, 255, 0.932);
 
-    >h1 {
+    >h3 {
         padding: 20px;
     }
 }
 
-.add-user-name {
-    display: flex;
-    gap: 8px;
+.mdc-text-field__input {
+    color: black !important;
 }
