--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,3 +2,20 @@
     [matTooltipPosition]="position.value!">
     <mat-icon>add</mat-icon>
 </button>
+
+<mat-card appearance="outlined">
+    <mat-card-content>
+        <table class="user-table">
+            <tr>
+                <th>Name</th>
+                <th>E-Mail</th>
+                <th>City</th>
+            </tr>
+            <tr *ngFor="let user of allUsers$ | async" routerLink="'/user/' + user.id">
+                <td>{{ user.firstName }} {{ user.lastName }}</td>
+                <td>{{ user.email }}</td>
+                <td>{{ user.city }}</td>
+            </tr>
+        </table>
+    </mat-card-content>
+</mat-card>
