--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -11,7 +11,7 @@
                 <th>E-Mail</th>
                 <th>City</th>
             </tr>
-            <tr *ngFor="let user of allUsers$ | async" routerLink="'/user/' + user.id">
+            <tr *ngFor="let user of allUsers$ | async" [routerLink]="['/user', user.id]">
                 <td>{{ user.firstName }} {{ user.lastName }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.city }}</td>
