--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,16 +1,15 @@
 <body>
-    <div class="user-details">
+    <div class="user-details" *ngIf="user">
         <mat-card appearance="outlined" class="user-detail-header">
             <mat-card-content class="user-detail-header-content">
                 <img src="img/profilem.png" alt="">
                 <div>
-                    <h2>{{ (user$ | async)?.firstName }} {{ (user$ | async)?.lastName }}</h2>
-                    <span>{{ (user$ | async)?.email }}</span>
+                    <h2>{{ user.firstName }} {{ user.lastName }}</h2>
+                    <span>{{ user.email }}</span>
                 </div>
                 <button class="edit-contact" mat-mini-fab (click)="editContactDialog()">
                     <mat-icon>edit</mat-icon>
                 </button>
-
             </mat-card-content>
         </mat-card>
 
@@ -20,8 +19,8 @@
                     <mat-card-content>
                         <div class="example-small-box mat-elevation-z4 address">
                             <h3>Address</h3>
-                            <span>Street: {{ (user$ | async)?.street }}</span>
-                            <span>City: {{ (user$ | async)?.zipCode }} {{ (user$ | async)?.city }}</span>
+                            <span>Street: {{ user.street }}</span>
+                            <span>City: {{ user.zipCode }} {{ user.city }}</span>
                         </div>
                     </mat-card-content>
                 </mat-card>
@@ -30,11 +29,10 @@
                 <mat-card appearance="outlined" class="user-info">
                     <mat-card-content>
                         <div class="example-large-box mat-elevation-z4 address">
-                            <h5>{{ (user$ | async)?.firstName }} {{ (user$ | async)?.lastName }}</h5>
-                            <span>Birthday: {{ (user$ | async)?.birthDate | date: 'mediumDate' }}</span>
-
-                            <span>Street: {{ (user$ | async)?.street }}</span>
-                            <span>City: {{ (user$ | async)?.zipCode }} {{ (user$ | async)?.city }}</span>
+                            <h5>{{ user.firstName }} {{ user.lastName }}</h5>
+                            <span>Birthday: {{ user.birthDate | date: 'dd.MM.yyyy' }}</span>
+                            <span>Street: {{ user.street }}</span>
+                            <span>City: {{ user.zipCode }} {{ user.city }}</span>
                         </div>
                     </mat-card-content>
                 </mat-card>
