--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -23,9 +23,12 @@
             <div>
                 <p>
                     <mat-form-field appearance="outline" class="full-width">
-                        <mat-label>E-Mail</mat-label>
-                        <input type="email" [disabled]="loading" [(ngModel)]="user.email" matInput placeholder="">
-                        <!-- <mat-hint>Please enter a name</mat-hint> -->
+                        <mat-label>Email</mat-label>
+                        <input [(ngModel)]="user.email" matInput placeholder="example@example.com" [formControl]="email"
+                            (blur)="updateErrorMessage()" required />
+                        @if (email.invalid) {
+                        <mat-error>{{errorMessage()}}</mat-error>
+                        }
                     </mat-form-field>
                 </p>
             </div>
