--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,10 +1,3 @@
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-}
-
 .dashboard-summary-content {
     display: flex;
     gap: 36px;
@@ -12,7 +5,8 @@ body {
     justify-content: space-between;
     max-width: 1280px;
     padding: 28px;
-
+    box-sizing: border-box;
+    color: white;
 }
 
 .dashboard-summary-cards {
