--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,63 +6,18 @@ body {
 }
 
 body {
+    background: rgba(0, 0, 0, 0.9);
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
-.mat-drawer-container {
-    height: 100vh;
-}
-
-.topnav .mat-toolbar {
-    min-height: 56px;
-    height: 56px;
-    border-bottom: 1px solid rgba($color: #ffffff, $alpha: 0.2);
-}
-
-.sidenav {
-    width: 300px;
-
-}
-
-.menu-items {
-    list-style-type: none;
-    padding: 10px;
-    margin: 0;
-
-    >li {
-        display: flex;
-        align-items: center;
-        gap: 12px;
-        padding: 14px 12px 14px 12px;
-        cursor: pointer;
-
-        &:hover {
-            background-color: rgba($color: #680df1, $alpha: 0.2);
-            border-radius: 20px;
-        }
-
-        &:focus {
-            outline: none;
-        }
-
-        &.active-link {
-            background-color: rgba($color: #680df1, $alpha: 0.5);
-            border-radius: 20px;
-        }
-    }
-}
-
-.logo-container {
-    padding: 0 20px 0 20px;
-    border-bottom: 1px solid rgba($color: #ffffff, $alpha: 0.2);
-    min-height: 55px;
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
-.router-container {
-    padding: 16px 40px 16px 40px;
+.max-width {
+    width: 100%;
+    max-width: 1920px;
+    height: 100vh;
 }
 
 .full-width {
@@ -76,4 +31,10 @@ body {
 
 .mb-10 {
     margin-bottom: 10px;
+}
+
+/* Dark Theme Styles */
+.dark-theme {
+    background-color: #121212;
+    color: #ffffff;
 }
